--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elevenlabs/elevenlabs-js": "^2.15.0",
     "cookie-session": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "google-auth-library": "^10.3.0",
     "googleapis": "^160.0.0",
     "helmet": "^7.1.0",
